fix: transparent box effect & background change

--- a/design/index.html
+++ b/design/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>JDRAE | Portfolio</title>
-  <link href="https://fonts.googleapis.com/css?family=Inter:300,400,600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Inter:300,400,500,600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 </head>
-<body style="background-image: url('assets/background.png'); background-size: cover; background-position: center;">
+<body>
     <div class="outer-container">
         <nav class="nav">
             <a class="nav-icon" href="#"><img src="assets/search.svg"/></a>
@@ -14,11 +14,11 @@
             <a class="nav-icon" href="#"><img src="assets/menu.svg"/></a>
         </nav>
         <div class="inner-container">
-            <div class="chart-card">
+            <div class="chart-card transparent">
                 <img src="assets/chart_img.png" style="height: 100%" />
             </div>
             <aside class="sidebar">
-                <div class="sidebar-card price-card">
+                <div class="price-card sidebar-card transparent">
                     <div class="price-card-top">
                         <div>
                             <img src="assets/bitcoin.png" alt="Bitcoin" style="width: 16px; height: 16px;" />
@@ -31,26 +31,26 @@
                     </div>
                     <span class="big-text price-value">105,023</span>
                 </div>
-                <div class="sidebar-card latency-card">
+                <div class="latency-card sidebar-card transparent">
                     <span class="small-text" style="margin-bottom: 8px;">Latency</span>
                     <span class="big-text latency-value">300ms</span>
                 </div>
                 <div class="small-box-container">
-                    <div class="small-box btc-box">
-                        <span class="medium-text btc-label">BTC</span>
-                    </div>
-                    <div class="small-box">
+                    <a href="#" class="btc-box small-box transparent">
+                        <span class="medium-text">BTC</span>
+                    </a>
+                    <a href="#" class="small-box transparent">
                         <span class="medium-text">ETH</span>
-                    </div>
-                    <div class="small-box">
+                    </a>
+                    <a href="#" class="small-box transparent">
                         <span class="medium-text">XRP</span>
-                    </div>
+                    </a>
                 </div>
             </aside>
         </div>
     </div>
     <footer class="footer">
-        <p style="font-size: 14px; padding-bottom: 1px; font-weight: 300;">JDRAE</p>
+        <p style="font-size: 14px; padding-bottom: 1px; font-weight: 300; color: #efefef;">JDRAE</p>
         <a href="https://github.com/jdrae" style="padding: 3px;"><img src="assets/github.svg"></a>
     </footer>
 </body>
