--- a/design/index.html
+++ b/design/index.html
@@ -14,11 +14,11 @@
             <a class="nav-icon" href="#"><img src="assets/menu.svg"/></a>
         </nav>
         <div class="inner-container">
-            <div class="chart-card transparent">
+            <div class="chart-card default-card">
                 <img src="assets/chart_img.png" style="height: 100%" />
             </div>
             <aside class="sidebar">
-                <div class="price-card sidebar-card transparent">
+                <div class="price-card sidebar-card default-card">
                     <div class="price-card-top">
                         <div>
                             <img src="assets/bitcoin.png" alt="Bitcoin" style="width: 16px; height: 16px;" />
@@ -31,18 +31,18 @@
                     </div>
                     <span class="big-text price-value">105,023</span>
                 </div>
-                <div class="latency-card sidebar-card transparent">
+                <div class="latency-card sidebar-card default-card">
                     <span class="small-text" style="margin-bottom: 8px;">Latency</span>
                     <span class="big-text latency-value">300ms</span>
                 </div>
                 <div class="small-box-container">
-                    <a href="#" class="btc-box small-box transparent">
+                    <a href="#" class="btc-box small-box default-card">
                         <span class="medium-text">BTC</span>
                     </a>
-                    <a href="#" class="small-box transparent">
+                    <a href="#" class="small-box default-card">
                         <span class="medium-text">ETH</span>
                     </a>
-                    <a href="#" class="small-box transparent">
+                    <a href="#" class="small-box default-card">
                         <span class="medium-text">XRP</span>
                     </a>
                 </div>
@@ -50,7 +50,7 @@
         </div>
     </div>
     <footer class="footer">
-        <p style="font-size: 14px; padding-bottom: 1px; font-weight: 300; color: #efefef;">JDRAE</p>
+        <p style="font-size: 14px; padding-bottom: 1px; font-weight: 300; color: #0d0d0d;">JDRAE</p>
         <a href="https://github.com/jdrae" style="padding: 3px;"><img src="assets/github.svg"></a>
     </footer>
 </body>
