--- a/design/index.html
+++ b/design/index.html
@@ -9,13 +9,12 @@
 <body>
     <div class="outer-container">
         <nav class="nav">
-            <a class="nav-icon" href="#"><img src="assets/search.svg"/></a>
+            <!-- <a class="nav-icon" href="#"><img src="assets/search.svg"/></a>
             <a class="nav-icon" href="#"><img src="assets/bell.svg"/></a>
-            <a class="nav-icon" href="#"><img src="assets/menu.svg"/></a>
+            <a class="nav-icon" href="#"><img src="assets/menu.svg"/></a> -->
         </nav>
         <div class="inner-container">
             <div class="chart-card default-card">
-                <img src="assets/chart_img.png" style="height: 100%" />
             </div>
             <aside class="sidebar">
                 <div class="price-card sidebar-card default-card">
