--- a/design/index.html
+++ b/design/index.html
@@ -23,9 +23,8 @@
                             <img src="assets/bitcoin.png" alt="Bitcoin" style="width: 16px; height: 16px;" />
                             <span class="small-text">BTCUSDT</span>
                         </div>
-                        <div>
-                            <img src="assets/up-arrow.svg" alt="Up" style="width: 10px; height: 10px;" />
-                            <span class="small-text" style="color: #09A249;">0.3%</span>
+                        <div class="small-text">
+                            <span>14</span><span>trades</span>
                         </div>
                     </div>
                     <span class="big-text price-value">105,023</span>
@@ -33,6 +32,7 @@
                 <div class="latency-card sidebar-card default-card">
                     <span class="small-text" style="margin-bottom: 8px;">Latency</span>
                     <span class="big-text latency-value">300ms</span>
+                    <span class="small-text">*Time received at frontend − received at backend from Binance</span>
                 </div>
                 <div class="small-box-container">
                     <a href="#" class="btc-box small-box default-card">
